--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph @ 0.17.2-py2.py3-none-any.whl
 blinker==1.6.2
 cachetools==5.3.1
 certifi==2023.5.7
@@ -8,7 +8,7 @@ colorama==0.4.6
 distlib==0.3.6
 filelock==3.12.2
 Flask==2.3.3
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+future @ 0.18.2-py3-none-any.whl
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
 gspread==5.10.0
@@ -16,7 +16,7 @@ idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+macholib @ 1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.3
 oauthlib==3.2.2
 pep8==1.7.1
@@ -28,7 +28,7 @@ pyfiglet==0.8.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+six @ 1.15.0-py2.py3-none-any.whl
 tabulate==0.9.0
 urllib3==1.26.16
 virtualenv==20.23.1
